--- a/Profile Card/style.css
+++ b/Profile Card/style.css
@@ -69,3 +69,18 @@ section  {
     object-fit: contain;
     border-radius: 10% 0%;
 }
+
+.prOfileCaRD .space .description {
+    width: 85%;
+    padding: 10px 20px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.prOfileCaRD .space .description p {
+    color: gray;
+    font-weight: 300;
+    text-shadow: 0px 0px 1px #000;
+}
