--- a/Profile Card/style.css
+++ b/Profile Card/style.css
@@ -15,28 +15,38 @@ section  {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background: #020d3b;
 }
 
 .prOfileCaRD {
     position: relative;
     left: 0;
     top: 0;
-    width: 50%;
-    padding: 0px 20px;
+    width: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    border-radius: 23px;
+    transition: all 0.5s;
+    filter: invert(1);
+    background: #0033ff;
+    box-shadow:  10px 10px 2px #010823,
+                 -10px -10px 2px #031253;
 }
 
 .prOfileCaRD header {
     position: relative;
     width: 100%;
-    padding: 0px 20px;
+    padding: 10px 20px;
     display: flex;
     align-items: center;
+    border-top-left-radius:23px;
+    border-top-right-radius:23px;
     justify-content: center;
-    background-color: rgb(0, 195, 255);
+    background: rgb(0, 81, 255);
+    box-shadow:  10px 10px 20px #010823,
+                 -10px -10px 20px #031253;
 }
 
 .prOfileCaRD header img {
@@ -56,31 +66,90 @@ section  {
     flex-direction: column;
 }
 
+.prOfileCaRD .space h1 {
+    color: #fff;
+}
 .prOfileCaRD .space .img-box {
     width: 50%;
     height: 100%;
     margin: 20px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     overflow: hidden;
+    border-radius: 50%;
+    background: #020d3b;
+    box-shadow: inset 10px 10px 20px #1c2a61,
+                inset -10px -10px 20px #0425b8;
 }
 
 .prOfileCaRD .space .img-box img {
     width: 100%;
     height: 100%;
+    border-radius: 50%;
     object-fit: contain;
-    border-radius: 10% 0%;
 }
 
 .prOfileCaRD .space .description {
-    width: 85%;
+    width: 100%;
     padding: 10px 20px;
-    display: flex;
     text-align: center;
-    align-items: center;
-    justify-content: center;
 }
 
 .prOfileCaRD .space .description p {
-    color: gray;
+    color: rgb(199, 193, 193);
     font-weight: 300;
-    text-shadow: 0px 0px 1px #000;
+    font-size: 0.8rem;
+}
+
+.prOfileCaRD .space .description a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    padding: 10px 20px;
+    margin: 50px 0px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    background: #021d8a;
+    
+}
+
+.prOfileCaRD .space .description a:hover {
+    color: #0033ff;
+    background-color: #fff;
+}
+
+.prOfileCaRD .social-media ul {
+    width: 100%;
+    margin: 30px 0px;
+    display: flex;
+    align-items: center;
+    list-style: none;
+    justify-content: center;
+}
+
+.prOfileCaRD .social-media ul li {
+    transition: 0.5s;
+}
+.prOfileCaRD .social-media ul li a {
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    transition: 0.5s;
+    border-radius: 50%;
+    border-radius: 50%;
+    background: #01135b;
+    box-shadow: inset 5px 5px 14px #010d3e,
+                inset -5px -5px 14px #011978;
+}
+
+.prOfileCaRD .social-media ul li a:hover {
+    color: #0033ff;
+    background-color: #fff;
 }
