--- a/Profile Card/style.css
+++ b/Profile Card/style.css
@@ -29,10 +29,9 @@ section  {
     flex-direction: column;
     border-radius: 23px;
     transition: all 0.5s;
-    filter: invert(1);
-    background: #0033ff;
-    box-shadow:  10px 10px 2px #010823,
-                 -10px -10px 2px #031253;
+    background: #FFCC00;
+    box-shadow:  10px 10px 2px #FEEFAE,
+                 -10px -10px 2px #FEF0B1;
 }
 
 .prOfileCaRD header {
@@ -44,9 +43,8 @@ section  {
     border-top-left-radius:23px;
     border-top-right-radius:23px;
     justify-content: center;
-    background: rgb(0, 81, 255);
-    box-shadow:  10px 10px 20px #010823,
-                 -10px -10px 20px #031253;
+    background: #FFAE00;
+    box-shadow:  0px 5px 10px #000;
 }
 
 .prOfileCaRD header img {
@@ -67,7 +65,12 @@ section  {
 }
 
 .prOfileCaRD .space h1 {
-    color: #fff;
+    color: rgb(0, 0, 0);
+}
+.prOfileCaRD .space p {
+    color: rgb(112, 112, 112);
+    margin-bottom: 10px;
+    font-size: 0.9rem;
 }
 .prOfileCaRD .space .img-box {
     width: 50%;
@@ -80,9 +83,9 @@ section  {
     flex-direction: column;
     overflow: hidden;
     border-radius: 50%;
-    background: #020d3b;
-    box-shadow: inset 10px 10px 20px #1c2a61,
-                inset -10px -10px 20px #0425b8;
+    background: #FFCC00;
+    box-shadow: inset 10px 10px 20px #F3E7B5,
+                inset -10px -10px 20px #FDE268;
 }
 
 .prOfileCaRD .space .img-box img {
@@ -99,26 +102,26 @@ section  {
 }
 
 .prOfileCaRD .space .description p {
-    color: rgb(199, 193, 193);
+    color: rgb(72, 72, 72);
     font-weight: 300;
     font-size: 0.8rem;
 }
 
 .prOfileCaRD .space .description a {
-    color: rgb(255, 255, 255);
+    color: #000;
     text-decoration: none;
     padding: 10px 20px;
     margin: 50px 0px;
     border: none;
     outline: none;
     border-radius: 10px;
-    background: #021d8a;
+    background: #FDE275;
     
 }
 
 .prOfileCaRD .space .description a:hover {
-    color: #0033ff;
-    background-color: #fff;
+    color: #FFCC00;
+    background-color: rgb(0, 0, 0);
 }
 
 .prOfileCaRD .social-media ul {
@@ -140,16 +143,15 @@ section  {
     align-items: center;
     flex-direction: column;
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: #000;
     transition: 0.5s;
     border-radius: 50%;
-    border-radius: 50%;
-    background: #01135b;
-    box-shadow: inset 5px 5px 14px #010d3e,
-                inset -5px -5px 14px #011978;
+    background: #fff;
+    box-shadow: inset 5px 5px 14px #F3E7B5,
+                inset -5px -5px 14px #FDE268;
 }
 
 .prOfileCaRD .social-media ul li a:hover {
-    color: #0033ff;
-    background-color: #fff;
+    color: #FFAE00;
+    background-color: #000;
 }
