--- a/DesignTemplate/style.css
+++ b/DesignTemplate/style.css
@@ -10,8 +10,9 @@ body {
     min-height: 100vh;
     align-items: center;
     justify-content: center;
-    background: url("img.jpg");
+    /* background: url("img.jpg"); */
     background-position: center;
+    background: #FBE695;
 }
 
 section {
@@ -25,10 +26,58 @@ section {
     align-items: center;
     justify-content: space-between;
     flex-direction:column;
-    border-style: solid;
-    border-radius: 50px;
-    border: 10px solid black;
-    background: rgba(255,255,255,0.7);
+    background: url("img2.jpg");
+    background-position: left;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 80px;
+    box-shadow:  10px 10px 20px #d3c17d,
+                 -10px -10px 20px #ffffad;
+}
+.time {
+    display: flex;
+    border: 10px solid #fff;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    /* transition: all 0.5s; */
+    animation: time 3s linear ;
+}
+@keyframes time {
+    10% {
+        border-left: 10px solid red;
+    }
+    30%{
+        border-left: 10px solid #fff;
+    }
+    50% { 
+        border-bottom: 10px solid red;
+    }
+    70% {
+        border-bottom: 10px solid #fff;
+    }
+    80% {
+        border-right: 10px solid red;
+    }
+    90% {
+        border-right: 10px solid #fff; 
+    }
+    100% {
+        border-top: 10px solid red;
+    }
+}
+.time p {
+    margin: 40px;
+    color: #000;
+    font-size: 2rem;
+    font-weight: 900;
+}
+.question h4 {
+    color: #000;
+    font-size: 1.2rem;
+    font-weight: 900;
+    text-align: center;
+    text-transform: capitalize;
 }
 .options {
     display: flex;
@@ -56,12 +105,30 @@ section {
     align-items: center;
     justify-content: center;
     margin: 10px 30px ;
-    border-style: solid;
-    border-radius: 20px;
     list-style: none;
 }
 .row ul li a {
-    padding: 20px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    padding: 20px;
+    min-height: 10vh;
+    min-width: 10vh;
     text-decoration: none;
     color: #fff;
+    text-align: center;
+    border-radius: 14px;
+    background: #FBE695;
+    box-shadow:  7px 7px 14px #d8c680,
+                 -7px -7px 14px #ffffaa;
+}
+.row ul li a span {
+    padding: 10px;
+    color: #000;
+    background-color: #fff;
+    border-radius: 20px;
+}
+.row ul li a:hover {
+    background-color: rgb(3, 213, 3);
 }
