--- a/DesignTemplate/style.css
+++ b/DesignTemplate/style.css
@@ -34,13 +34,19 @@ section {
     box-shadow:  10px 10px 20px #d3c17d,
                  -10px -10px 20px #ffffad;
 }
+header h1 {
+    color: #fff;
+    font-size: 2rem;
+    font-weight: 900;
+    text-shadow: 2px 2px 5px #000;
+}
 .time {
     display: flex;
     border: 10px solid #fff;
     border-radius: 50%;
     align-items: center;
     justify-content: center;
-    /* transition: all 0.5s; */
+    transition: all 0.5s;
     animation: time 3s linear ;
 }
 @keyframes time {
@@ -77,8 +83,8 @@ section {
     font-size: 1.2rem;
     font-weight: 900;
     text-align: center;
-    text-transform: capitalize;
-}
+    text-shadow: 0px 0px 2px #000;
+}   
 .options {
     display: flex;
     flex-direction: column;
@@ -116,19 +122,16 @@ section {
     min-height: 10vh;
     min-width: 10vh;
     text-decoration: none;
-    color: #fff;
+    color: #000;
+    font-weight: 900;
     text-align: center;
+    transition: 0.5s;
     border-radius: 14px;
     background: #FBE695;
     box-shadow:  7px 7px 14px #d8c680,
                  -7px -7px 14px #ffffaa;
 }
-.row ul li a span {
-    padding: 10px;
-    color: #000;
-    background-color: #fff;
-    border-radius: 20px;
-}
 .row ul li a:hover {
-    background-color: rgb(3, 213, 3);
+    transform: translateY(-10px) scale(1.1);
+    background-color: #d8c680;
 }
